Fixing custom build step generation for FastBuild - Adding missing variables to the "Declare" - Fix multiple "Exec" with same output by adding it only once. Added validations to make sure each one has the exact same settings - Adding a new sample that test CustomBuildStep. At build (from FastBuild or from MSBuild), the filegeneration.bat should be called before building the project. It is generating the "main.cpp".

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -159,6 +159,14 @@ jobs:
           & $env:SHARPMAKE_EXE "/sources('CSharpVsix.sharpmake.cs')"
           & $env:COMPILE_BATCH projects\CSharpVsixSolution.vs2017.v4_7_2.sln "${{ matrix.configuration }}" "Any CPU"
 
+      - name: CustomBuildStep ${{ matrix.configuration }}
+        if: runner.os == 'Windows'
+        working-directory: 'samples/CustomBuildStep'
+        run: | 
+          & $env:SHARPMAKE_EXE "/sources('CustomBuildStep.sharpmake.cs')"
+          & $env:COMPILE_BATCH projects\custombuildstepsolution_vs2017_win64.sln "${{ matrix.configuration }}" "x64"
+          projects\output\win64\${{ matrix.configuration }}\custombuildstep.exe
+
       - name: CSharpWCF ${{ matrix.configuration }}
         if: runner.os == 'Windows'
         working-directory: 'samples/CSharpWCF'
