--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,7 +13,6 @@ env:
   DOTNET_NOLOGO: true
 
 jobs:
-  remove_android_build_tool_version: "31.0.0"
   build:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -232,7 +231,7 @@ jobs:
 
       - name: HelloWorld ${{ matrix.configuration }}
         if: runner.os == 'Windows'
-        working-directory: 'samples/HelloWorld' 
+        working-directory: 'samples/HelloWorld'
         run: |
           & $env:SHARPMAKE_EXE "/sources('HelloWorld.sharpmake.cs')"
           & $env:COMPILE_BATCH projects\helloworld_vs2019_win32.sln "${{ matrix.configuration }}" "Win32"
@@ -254,12 +253,13 @@ jobs:
       - name: HelloAndroid ${{ matrix.configuration }}
         if: runner.os == 'Windows'
         working-directory: 'samples/HelloAndroid'
-        run: |
+        run: | #Installed Build Tools revision 31.0.0 is corrupted. Need to remove and install again using the SDK Manager.
+          & echo "REMOVE_ANDROID_BUILD_TOOL_VERSION=31.0.0" >> $GITHUB_ENV
           & $env:SHARPMAKE_EXE "/sources('HelloAndroid.main.sharpmake.cs')"
-          #Installed Build Tools revision 31.0.0 is corrupted. Need to remove and install again using the SDK Manager.
-          & $env:ANDROID_HOME/tools/bin/sdkmanager --uninstall 'build-tools;${remove_android_build_tool_version}' 
+          & $env:ANDROID_HOME/tools/bin/sdkmanager --uninstall 'build-tools;${{ env.REMOVE_ANDROID_BUILD_TOOL_VERSION }}' 
           & $env:COMPILE_BATCH codebase\temp\solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}_NoBlob" "arm64_v8a"
           & $env:COMPILE_BATCH codebase\temp\solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}_NoBlob" "x86_64"
+            
           
       - name: NetCore/DotNetCoreFrameworkHelloWorld ${{ matrix.configuration }}
         if: runner.os == 'Windows'
