--- a/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
+++ b/Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
@@ -57,9 +57,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Android\AndroidAgdePlatform.cs" />
     <Compile Include="Android\AndroidFragments.cs" />
     <Compile Include="Android\AndroidPlatform.Vcxproj.Template.cs" />
     <Compile Include="Android\AndroidPlatform.cs" />
+    <Compile Include="Android\AndroidPlatformAgde.Vcxproj.Template.cs" />
     <Compile Include="Android\GlobalSettings.cs" />
     <Compile Include="Android\Util.cs" />
     <Compile Include="Apple\BaseApplePlatform.Bff.Template.cs" />
